fix font size on mobile

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,5 +1,3 @@
-/* Renderer.module.css */
-
 .title h1 {
   font-size: clamp(1.25rem, 4vw, 2.75rem) !important;
   font-weight: 600;
@@ -37,6 +35,10 @@
     height: auto;
     overflow-y: visible;
   }
+
+  .body p {
+    font-size: 14px !important;
+  }
 }
 
 .image {
@@ -48,7 +50,7 @@
   max-height: 500px;
 }
 
-.image p{
+.image p {
   display: none;
 }
 
@@ -97,7 +99,7 @@
 }
 
 .body p {
-  color: var(--primary_color-subtitle);
+  color: var(--slate-600);
   font-size: 16px;
   line-height: 1.5;
 }
